--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ poise = { git = "https://github.com/kangalioo/poise", features = [
 	"collector",
 ], branch = "master" }
 tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
+diesel = { version = "1.4.8", features = ["postgres"] }
