--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,7 @@ poise = { git = "https://github.com/kangalioo/poise", features = [
 ], branch = "master" }
 tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
 diesel = { version = "1.4.8", features = ["postgres"] }
+tokio-diesel = "0.3.0"
+async-google-apis-common = "0.3.0"
+serde = "1.0.136"
+hyper-rustls = { version = "~0.22.0", features = ["rustls-native-certs"] }
