--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ poise = { git = "https://github.com/kangalioo/poise", features = [
 tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
 diesel = { version = "1.4.8", features = ["postgres"] }
 tokio-diesel = "0.3.0"
-async-google-apis-common = "0.3.0"
 serde = "1.0.136"
 hyper-rustls = { version = "~0.22.0", features = ["rustls-native-certs"] }
+oauth2 = "4.1.0"
+anyhow = "1.0.57"
