--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,4 @@ rouille = "3.5.0"
 serde = "1.0.136"
 tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
 tokio-diesel = "0.3.0"
+dotenv = "0.15.0"
