--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,14 +12,15 @@ diesel = { version = "1.4.8", default-features = false, features = [
 futures = "0.3.21"
 hyper = "0.14.18"
 hyper-rustls = { version = "~0.22.0", features = ["rustls-native-certs"] }
-label-logger = { git = "https://github.com/MrNossiom/label-logger", branch = "main" }
 poise = { git = "https://github.com/kangalioo/poise", features = [
 	"collector",
 ], branch = "master" }
 oauth2 = "4.1.0"
-ron = "0.7"
 rouille = "3.5.0"
 serde = "1.0.136"
 tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
 tokio-diesel = "0.3.0"
 dotenv = "0.15.0"
+log = "0.4.17"
+env_logger = "0.9.0"
+lazy_static = "1.4.0"
