--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,3 +26,4 @@ env_logger = "0.9.0"
 lazy_static = "1.4.0"
 console = "0.15.0"
 chrono = "0.4.19"
+uuid = { version = "1.1.0", features = ["v4"] }
