--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,3 +27,4 @@ lazy_static = "1.4.0"
 console = "0.15.0"
 chrono = "0.4.19"
 uuid = { version = "1.1.0", features = ["v4"] }
+serde_json = "1.0.81"
