--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,8 @@ edition = "2021"
 anyhow = "1.0.57"
 askama = "0.11.1"
 diesel = { version = "1.4.8", default-features = false, features = [
-	"postgres",
+	"mysql",
+	"chrono",
 ] }
 futures = "0.3.21"
 hyper = "0.14.18"
