--- a/.env.example
+++ b/.env.example
@@ -4,5 +4,6 @@ GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 
 LOGS_WEBHOOK=
-SERVER_URL=localhost:3000
-PRODUCTION=true
+SERVER_URL=
+PORT=
+PRODUCTION=
