--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,17 +1,25 @@
 version: '3.7'
 
 services:
-    db:
-        image: postgres
+    database:
+        image: mariadb
         environment:
-            POSTGRES_USER: server
-            POSTGRES_PASSWORD: server
+            MARIADB_DATABASE: server
+            MARIADB_USER: server
+            MARIADB_PASSWORD: server
+            MARIADB_RANDOM_ROOT_PASSWORD: true
         ports:
-            - 5432:5432
+            - 3306:3306
+        healthcheck:
+            test: mysqladmin ping -h 127.0.0.1 -u $$MARIADB_USER -p=$$MARIADB_PASSWORD
+            timeout: 5s
+            retries: 10
     client:
         build: .
         volumes:
-            - .env.docker:/tmp/discord_smp_link/.env
-            - ./logs/:/tmp/discord_smp_link/logs
-        depends_on: [database]
+            - .env.docker:/discord_smp_link/.env
+            - ./logs/:/discord_smp_link/logs
+        depends_on:
+            database: 
+                condition: service_healthy
         network_mode: "host"
