--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
-version: '3.7'
+version: '3.9'
 
 services:
-    db:
+    database:
         image: mariadb
         environment:
             MARIADB_DATABASE: server
