--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,22 +4,22 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-anyhow = "1.0.57"
+anyhow = { version = "1.0.58", features = ["backtrace"] }
 askama = "0.11.1"
 diesel = { version = "1.4.8", default-features = false, features = [
 	"mysql",
 	"chrono",
 ] }
 futures = "0.3.21"
-hyper = "0.14.18"
-hyper-rustls = { version = "~0.22.0", features = ["rustls-native-certs"] }
+hyper = "0.14.19"
+hyper-rustls = { version = "0.23.0", features = ["rustls-native-certs"] }
 poise = { git = "https://github.com/kangalioo/poise", features = [
 	"collector",
 ], branch = "master" }
-oauth2 = "4.1.0"
+oauth2 = "4.2.0"
 rouille = "3.5.0"
-serde = "1.0.136"
-tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
+serde = "1.0.138"
+tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
 tokio-diesel = { git = "https://github.com/mehcode/tokio-diesel", rev = "f4af425" }
 dotenv = "0.15.0"
 log = "0.4.17"
@@ -27,5 +27,5 @@ env_logger = "0.9.0"
 lazy_static = "1.4.0"
 console = "0.15.0"
 chrono = "0.4.19"
-uuid = { version = "1.1.0", features = ["v4"] }
-serde_json = "1.0.81"
+uuid = { version = "1.1.2", features = ["v4"] }
+serde_json = "1.0.82"
