--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,10 +22,11 @@ serde = "1.0.138"
 tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
 tokio-diesel = { git = "https://github.com/mehcode/tokio-diesel", rev = "f4af425" }
 dotenv = "0.15.0"
-log = "0.4.17"
-env_logger = "0.9.0"
 lazy_static = "1.4.0"
 console = "0.15.0"
 chrono = "0.4.19"
 uuid = { version = "1.1.2", features = ["v4"] }
 serde_json = "1.0.82"
+tracing = "0.1.36"
+tracing-subscriber = "0.3.15"
+tracing-appender = "0.2.2"
