feat(infra): add terraform infrastructure

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,20 @@ logs/
 # Env
 .env*
 !.env.example
+
+# Terraform
+.terraform/
+.terraform.lock.*
+*.tfstate
+*.tfstate.*
+
+*.tfvars
+*.tfvars.json
+
+override.tf
+override.tf.json
+*_override.tf
+*_override.tf.json
+
+.terraformrc
+terraform.rc
