feat(i18n): add i18n support with i18n-ally vscode ext support

--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,13 @@ target/
 
 # Misc
 .DS_Store
-.vscode/
+.vscode/*
+!.vscode/settings.json
 .idea/
 logs/
+
+# Localisation support
+!.vscode/i18n-ally-custom-framework.yml
 
 # Env
 .env*
