--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,3 +30,7 @@ serde_json = "1.0.82"
 tracing = "0.1.36"
 tracing-subscriber = "0.3.15"
 tracing-appender = "0.2.2"
+fluent = "0.16.0"
+intl-memoizer = "0.5.1"
+fluent-syntax = "0.11.0"
+unic-langid = { version = "0.9.0", features = ["macros"] }
