--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,7 @@ edition = "2021"
 [dependencies]
 anyhow = { version = "1.0.58", features = ["backtrace"] }
 askama = "0.11.1"
-diesel = { version = "1.4.8", default-features = false, features = [
-	"mysql",
-	"chrono",
-] }
+diesel = { version = "2.0.0", default-features = false, features = ["mysql", "chrono", "r2d2"] }
 futures = "0.3.21"
 hyper = "0.14.19"
 hyper-rustls = { version = "0.23.0", features = ["rustls-native-certs"] }
@@ -20,7 +17,6 @@ serde = "1.0.138"
 tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
 tokio-diesel = { git = "https://github.com/mehcode/tokio-diesel", rev = "f4af425" }
 dotenv = "0.15.0"
-lazy_static = "1.4.0"
 console = "0.15.0"
 chrono = "0.4.19"
 uuid = { version = "1.1.2", features = ["v4"] }
@@ -32,3 +28,4 @@ fluent = "0.16.0"
 intl-memoizer = "0.5.1"
 fluent-syntax = "0.11.0"
 unic-langid = { version = "0.9.0", features = ["macros"] }
+diesel_migrations = { version = "2.0.0", features = ["mysql"] }
