feat: add MessageComponentContext for button interactions support

--- a/.vscode/i18n-ally-custom-framework.yml
+++ b/.vscode/i18n-ally-custom-framework.yml
@@ -1,10 +1,11 @@
 languageIds: [rust]
 enabledParsers: [ftl]
 
+# To help with this, you can use https://www.freeformatter.com/json-escape.html
 usageMatchRegex:
   # Translation Trait
   - "[^\\w\\d]*\\.get\\([\\n\\t ]*?['\"`]({key})['\"`]"
   # Applications commands functions
-  - "#\\[command\\(slash_command.*\\)\\]\\npub\\(crate\\) async fn (\\w+)\\("
+  - "#\\[command\\((?:\\n?[\\t ]*)(?:slash_command|context_menu_command)(?:.|\\n)*?\\)\\]\\npub\\(.+\\) async fn (\\w+)\\("
 
 monopoly: true
