--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,23 +4,26 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-anyhow = { version = "1.0.58", features = ["backtrace"] }
+anyhow = { version = "1.0.63", features = ["backtrace"] }
 askama = "0.11.1"
-diesel = { version = "2.0.0", default-features = false, features = ["mysql", "chrono", "r2d2"] }
-futures = "0.3.21"
-hyper = "0.14.19"
+diesel = { version = "2.0.0", default-features = false, features = [
+	"mysql",
+	"chrono",
+	"r2d2",
+] }
+futures = "0.3.24"
+hyper = "0.14.20"
 hyper-rustls = { version = "0.23.0", features = ["rustls-native-certs"] }
 poise = { git = "https://github.com/kangalioo/poise", branch = "develop" }
-oauth2 = "4.2.0"
+oauth2 = "4.2.3"
 rouille = "3.5.0"
-serde = "1.0.138"
-tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
-tokio-diesel = { git = "https://github.com/mehcode/tokio-diesel", rev = "f4af425" }
-dotenv = "0.15.0"
-console = "0.15.0"
-chrono = "0.4.19"
+serde = "1.0.144"
+tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }
+dotenvy = "0.15.3"
+console = "0.15.1"
+chrono = "0.4.22"
 uuid = { version = "1.1.2", features = ["v4"] }
-serde_json = "1.0.82"
+serde_json = "1.0.85"
 tracing = "0.1.36"
 tracing-subscriber = "0.3.15"
 tracing-appender = "0.2.2"
