feat: add more checks to button login event

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,10 @@
 {
 	"cSpell.words": [
+		"askama",
 		"builtins",
 		"cooldown",
 		"csrf",
+		"jinja",
 		"langid",
 		"libmysqlclient",
 		"memoizer",
