feat: use axum instead of custom server

--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,9 @@ DATABASE_URL=
 DISCORD_TOKEN=
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
+DISCORD_INVITE_CODE=
 
-LOGS_WEBHOOK=
 SERVER_URL=
 PORT=
+PORT_HTTPS=
 PRODUCTION=
