--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,29 +1,43 @@
-# Add the contents of this file to `config.toml` to enable "fast build" configuration. Please read the notes below.
-
-# NOTE: For maximum performance, build using a nightly compiler
-# If you are using rust stable, remove the "-Zshare-generics=y" below.
+[build]
+rustflags = ["--cfg", "tokio_unstable", "-Ctarget-cpu=native"]
 
 [target.x86_64-unknown-linux-gnu]
 linker = "clang"
-rustflags = ["-Clink-arg=-fuse-ld=lld", "-Zshare-generics=y"]
+rustflags = [
+	"-Clink-arg=-fuse-ld=lld",
+	"-Zshare-generics=y",
+	"--cfg",
+	"tokio_unstable",
+]
 
-# NOTE: you must manually install https://github.com/michaeleisel/zld on mac. you can easily do this with the "brew" package manager:
-# `brew install michaeleisel/zld/zld`
+# NOTE: you must manually install https://github.com/michaeleisel/zld on mac.
+# You can easily do this with Brew: `brew install michaeleisel/zld/zld`
 [target.x86_64-apple-darwin]
-rustflags = ["-C", "link-arg=-fuse-ld=/usr/local/bin/zld", "-Zshare-generics=y"]
+rustflags = [
+	"-Clink-arg=-fuse-ld=/usr/local/bin/zld",
+	"-Ctarget-cpu=native",
+	"-Zshare-generics=y",
+	"--cfg",
+	"tokio_unstable",
+]
 
 [target.aarch64-apple-darwin]
 rustflags = [
-	"-C",
-	"link-arg=-fuse-ld=/opt/homebrew/bin/zld",
+	"-Clink-arg=-fuse-ld=/opt/homebrew/bin/zld",
+	"-Ctarget-cpu=native",
 	"-Zshare-generics=y",
+	"--cfg",
+	"tokio_unstable",
 ]
 
 [target.x86_64-pc-windows-msvc]
 linker = "rust-lld.exe"
-rustflags = ["-Zshare-generics=n"]
+rustflags = [
+	"-Ctarget-cpu=native",
+	"-Zshare-generics=n",
+	"--cfg",
+	"tokio_unstable",
+]
 
-# Optional: Uncommenting the following improves compile times, but reduces the amount of debug info to 'line number tables only'
-# In most cases the gains are negligible, but if you are on macos and have slow compile times you should see significant gains.
 [profile.dev]
 debug = 1
