--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,6 @@ edition = "2021"
 
 [dependencies]
 anyhow = { version = "1.0.65", features = ["backtrace"] }
-askama = "0.11.1"
-axum = { version = "0.5.16", features = ["http2", "macros"] }
-axum-extra = { version = "0.3.7", features = ["spa"] }
 console-subscriber = "0.1.8"
 diesel_migrations = { version = "2.0.0", features = ["mysql"] }
 dotenvy = "0.15.5"
@@ -33,12 +30,14 @@ tracing-subscriber = { version = "0.3.15", features = [
 	"env-filter",
 	"json",
 ] }
-tracing-appender = "0.2.2"
 # We don't need the valuable feature, but the documentation doesn't compile if we don't use it.
 tracing-stackdriver = { version = "0.5.0", features = ["valuable"] }
 unic-langid = { version = "0.9.0", features = ["macros"] }
 uuid = { version = "1.1.2", features = ["v4"] }
 url = "2.3.1"
+figment = { version = "0.10.7", features = ["toml", "env"] }
+rocket = "0.5.0-rc.2"
+rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["tera"] }
 
 [dependencies.diesel]
 version = "2.0.0"
@@ -49,12 +48,3 @@ features = ["mysql", "r2d2"]
 version = "0.11.12"
 default-features = false
 features = ["rustls-tls-native-roots"]
-
-[dependencies.tower]
-version = "0.4.13"
-default-features = false
-features = ["tracing"]
-
-[dependencies.tower-http]
-version = "0.3.4"
-features = ["tracing", "trace", "timeout", "fs", "redirect"]
