--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,13 +16,15 @@ hyper-rustls = { version = "0.23.0", features = ["rustls-native-certs"] }
 intl-memoizer = "0.5.1"
 oauth2 = "4.2.3"
 poise = { git = "https://github.com/kangalioo/poise", branch = "develop" }
+rocket = { version = "0.5.0-rc.2", features = ["tls"] }
+rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["tera"] }
 rustls = "0.20.6"
 rustls-pemfile = "1.0.1"
-thiserror = "1.0.36"
+thiserror = "1.0.37"
 secrecy = "0.8.0"
 serde = "1.0.145"
 serde_json = "1.0.85"
-tokio = { version = "1.21.1", features = ["full", "tracing"] }
+tokio = { version = "1.21.2", features = ["full", "tracing"] }
 tokio-rustls = "0.23.4"
 tracing = "0.1.36"
 tracing-subscriber = { version = "0.3.15", features = [
@@ -35,9 +37,6 @@ tracing-stackdriver = { version = "0.5.0", features = ["valuable"] }
 unic-langid = { version = "0.9.0", features = ["macros"] }
 uuid = { version = "1.1.2", features = ["v4"] }
 url = "2.3.1"
-figment = { version = "0.10.7", features = ["toml", "env"] }
-rocket = "0.5.0-rc.2"
-rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["tera"] }
 
 [dependencies.diesel]
 version = "2.0.0"
