feat: remove last prefix command and register commands on startup in specified dev guild

--- a/.env.example
+++ b/.env.example
@@ -3,8 +3,9 @@ DISCORD_TOKEN=
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 DISCORD_INVITE_CODE=
-
 SERVER_URL=
-PORT=
-PORT_HTTPS=
-PRODUCTION=
+
+PRODUCTION=true
+DISCORD_DEV_GUILD=
+
+LOGTAIL_SINK_TOKEN=
