--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,3 +46,9 @@ features = ["mysql"]
 version = "0.11.12"
 default-features = false
 features = ["rustls-tls-native-roots"]
+
+
+[profile.release]
+strip = true
+opt-level = 3
+lto = true
