--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,7 @@ tracing-subscriber = { version = "0.3.16", features = [
 unic-langid = { version = "0.9.0", features = ["macros"] }
 uuid = { version = "1.2.1", features = ["v4"] }
 url = "2.3.1"
+pin-project = "1.0.12"
 
 [dependencies.diesel]
 version = "2.0.1"
