chore: change developement instruction and use cloudflare tunnels for developement

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
+# See the `Config` struct in `src/config.rs` for more information on these
+
 DATABASE_URL=
 DISCORD_TOKEN=
 GOOGLE_CLIENT_ID=
@@ -9,4 +11,5 @@ DEFAULT_LOCALE=
 PRODUCTION=true
 DISCORD_DEV_GUILD=
 
+## Docker
 LOGTAIL_SINK_TOKEN=
