--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,12 +3,14 @@
 		"alpn",
 		"askama",
 		"builtins",
+		"cloudflared",
 		"cooldown",
 		"csrf",
 		"deadpool",
 		"jinja",
 		"langid",
 		"libmysqlclient",
+		"Logtail",
 		"memoizer",
 		"mkcert",
 		"Mysql",
