--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,47 +9,47 @@ license = "MIT"
 edition = "2021"
 
 [dependencies]
-anyhow = { version = "1.0.69", features = ["backtrace"] }
-console-subscriber = "0.1.8"
-diesel-async = { version = "0.2.1", features = ["mysql", "deadpool"] }
-diesel_migrations = { version = "2.0.0", features = ["mysql"] }
-dotenvy = "0.15.6"
+anyhow = { version = "1.0.71", features = ["backtrace"] }
+console-subscriber = "0.1.9"
+diesel-async = { version = "0.3.1", features = ["mysql", "deadpool"] }
+diesel_migrations = { version = "2.1.0", features = ["mysql"] }
+dotenvy = "0.15.7"
 fluent = "0.16.0"
 fluent-syntax = "0.11.0"
-futures = "0.3.27"
-hyper = { version = "0.14.25", features = ["full"] }
-hyper-rustls = { version = "0.23.2", features = ["rustls-native-certs"] }
+futures = "0.3.28"
+hyper = { version = "0.14.27", features = ["full"] }
+hyper-rustls = { version = "0.24.0", features = ["rustls-native-certs"] }
 intl-memoizer = "0.5.1"
-oauth2 = "4.3.0"
-poise = { git = "https://github.com/kangalioo/poise", branch = "develop" }
-rocket = { version = "0.5.0-rc.2", features = ["tls"] }
-rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["tera"] }
-rustls = "0.20.8"
-rustls-pemfile = "1.0.2"
-thiserror = "1.0.39"
+oauth2 = "4.4.1"
+poise = { git = "https://github.com/kangalioo/poise", branch = "current" }
+rocket = { version = "0.5.0-rc.3", features = ["tls"] }
+rocket_dyn_templates = { version = "0.1.0-rc.3", features = ["tera"] }
+rustls = "0.21.2"
+rustls-pemfile = "1.0.3"
+thiserror = "1.0.40"
 secrecy = "0.8.0"
-serde = "1.0.154"
-serde_json = "1.0.94"
-tokio = { version = "1.26.0", features = ["full", "tracing"] }
-tokio-rustls = "0.23.4"
+serde = "1.0.165"
+serde_json = "1.0.99"
+tokio = { version = "1.29.1", features = ["full", "tracing"] }
+tokio-rustls = "0.24.1"
 tracing = "0.1.37"
-tracing-subscriber = { version = "0.3.16", features = [
+tracing-subscriber = { version = "0.3.17", features = [
 	"registry",
 	"env-filter",
 	"json",
 ] }
 unic-langid = { version = "0.9.1", features = ["macros"] }
-uuid = { version = "1.3.0", features = ["v4"] }
-url = "2.3.1"
-pin-project = "1.0.12"
+uuid = { version = "1.4.0", features = ["v4"] }
+url = "2.4.0"
+pin-project = "1.1.2"
 
 [dependencies.diesel]
-version = "2.0.3"
+version = "2.1.0"
 default-features = false
 features = ["mysql"]
 
 [dependencies.reqwest]
-version = "0.11.14"
+version = "0.11.18"
 default-features = false
 features = ["rustls-tls-native-roots"]
 
