chore: update deps

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ hyper = { version = "0.14.27", features = ["full"] }
 hyper-rustls = { version = "0.24.0", features = ["rustls-native-certs"] }
 intl-memoizer = "0.5.1"
 oauth2 = "4.4.1"
-poise = { git = "https://github.com/kangalioo/poise", branch = "current" }
+poise = { git = "https://github.com/serenity-rs/poise", branch = "current" }
 rocket = { version = "0.5.0-rc.3", features = ["tls"] }
 rocket_dyn_templates = { version = "0.1.0-rc.3", features = ["tera"] }
 rustls = "0.21.2"
@@ -53,6 +53,20 @@ version = "0.11.18"
 default-features = false
 features = ["rustls-tls-native-roots"]
 
+[lints]
+[lints.rust]
+[lints.clippy]
+pedantic = { level = "warn", priority = -1 }
+nursery = { level = "warn", priority = -1 }
+cargo = { level = "warn", priority = -1 }
+
+missing_docs_in_private_items = "warn"
+unwrap_used = "warn"
+
+multiple_crate_versions = "allow"
+redundant_pub_crate = "allow"
+[lints.rustdoc]
+broken_intra_doc_links = "warn"
 
 [profile.release]
 strip = true
