--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -6,30 +6,14 @@ jobs:
     name: Check, Test, Format and Clippy
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v4
+      - uses: dtolnay/rust-toolchain@stable
+        with:
+          components: rustfmt, clippy
 
       - name: Cache Rust dependencies
         uses: Swatinem/rust-cache@v2
 
-      - name: Cargo Check
-        uses: actions-rs/cargo@v1
-        with:
-          command: check
-
-      - name: Cargo Tests
-        uses: actions-rs/cargo@v1
-        with:
-          command: test
-
-      - name: Format Check
-        uses: actions-rs/cargo@v1
-        with:
-          command: fmt
-          args: --all -- --check
-
-      - name: Clippy Check
-        uses: actions-rs/cargo@v1
-        with:
-          command: clippy
-          args: -- -D warnings
+      - run: cargo clippy -- -D warnings
+      - run: cargo test
+      - run: cargo fmt --all -- --check
