--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -2,42 +2,16 @@
 rustflags = ["--cfg", "tokio_unstable", "-Ctarget-cpu=native"]
 
 [target.x86_64-unknown-linux-gnu]
-linker = "clang"
-rustflags = [
-	"-Clink-arg=-fuse-ld=lld",
-	"-Zshare-generics=y",
-	"--cfg",
-	"tokio_unstable",
-]
+rustflags = ["--cfg", "tokio_unstable"]
 
-# NOTE: you must manually install https://github.com/michaeleisel/zld on mac.
-# You can easily do this with Brew: `brew install michaeleisel/zld/zld`
 [target.x86_64-apple-darwin]
-rustflags = [
-	"-Clink-arg=-fuse-ld=/usr/local/bin/zld",
-	"-Ctarget-cpu=native",
-	"-Zshare-generics=y",
-	"--cfg",
-	"tokio_unstable",
-]
+rustflags = ["--cfg", "tokio_unstable"]
 
 [target.aarch64-apple-darwin]
-rustflags = [
-	"-Clink-arg=-fuse-ld=/opt/homebrew/bin/zld",
-	"-Ctarget-cpu=native",
-	"-Zshare-generics=y",
-	"--cfg",
-	"tokio_unstable",
-]
+rustflags = ["--cfg", "tokio_unstable"]
 
 [target.x86_64-pc-windows-msvc]
-linker = "rust-lld.exe"
-rustflags = [
-	"-Ctarget-cpu=native",
-	"-Zshare-generics=n",
-	"--cfg",
-	"tokio_unstable",
-]
+rustflags = ["--cfg", "tokio_unstable"]
 
 [profile.dev]
 debug = 1
